<resources>
    <string name="RuninPark">Runin\' Park</string>
    <string name="name">Nome</string>
    <string name="welcome_to_runin_park">Bem vindo ao Runin\' Park!</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="profile_picture">User\'s Profile Picture</string>
    <string name="sair">Sair</string>
    <string name="login">Entrar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_here">Não tem conta?Efetue registo aqui!</string>
    <string name="remember_me">Guardar sessão</string>
    <string name="groups_list">Lista de grupos\n</string>
    <string name="add_run">Adicionar corrida\n</string>
    <string name="hours">Horas</string>
    <string name="minutes">Minutos\n</string>
    <string name="seconds">Segundos\n</string>
    <string name="distance_km">Distância(Km)</string>
    <string name="add_run_to_group">Adicionar corrida</string>
    <string name="create_group">Criar grupo\n</string>
    <string name="group_name">Nome do grupo</string>
    <string name="group_city">Cidade\n</string>
    <string name="create_group_btn">Criar grupo</string>
    <string name="about_us_long_text">Esta aplicação foi desenvolvida no âmbito da cadeira de Desenvolvimento de Aplicações Móveis, do curso de Licenciatura de Engenharia Informática,ano letivo 2023/2024, do Instituto Politécnico de Tomar, pelos alunos Daniel Santos e Hugo Gonçalves.</string>
    <string name="daniel_santos_naluno_23298">Daniel Santos\nAluno 23298</string>
    <string name="hugo_gon_alves_naluno_23327">Hugo Gonçalves\nAluno 23327</string>
    <string name="user_info">Informações de utilizador</string>
    <string name="my_groups">Grupos criados</string>
    <string name="posts">Posts</string>
    <string name="leave_group">Sair do Group</string>
    <string name="join_group">Entrar no Grupo</string>
    <string name="please_log_in_to_see_this_group">Tem que estar autenticado para visualizar este grupo!</string>
    <string name="members">Membros</string>
    <string name="runs">Corridas</string>
    <string name="write_something">Escreva algo,sinta-se inspirado...</string>
    <string name="postar">Postar</string>
    <string name="register_your_account">Crie a sua conta</string>
    <string name="register">Registar</string>
    <string name="weight_kg">Peso(kg)</string>
    <string name="last_name">Último nome</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="address">Morada</string>
    <string name="height_m">Altura(m)</string>
    <string name="jorge">Jorge</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="miguel">Miguel</string>
    <string name="exemp_morada">Rua dos Santos,nº8 3º direito</string>
    <string name="rua_coiso_e_tal">Rua coiso e tal</string>
    <string name="nome_falso">nome_falso</string>
    <string name="groups">Grupos</string>
    <string name="about">Sobre Nós</string>
    <string name="dashboard">DashBoard</string>
    <string name="logout">Logout</string>
    <string name="carregar_foto">Carregar Foto</string>
    <string name="my_groups_nav">Os meus grupos</string>
    <string name="add_group">Adicionar grupo</string>
</resources>