<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.GroupPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_leave_group"

            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/leave_group"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_join_group"

            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/join_group"
            android:clickable="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/group_photo"
                    android:layout_width="113dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/my_groups" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:contentDescription="@string/profile_picture"
                    android:focusable="true"
                    android:minHeight="48dp"

                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/group_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="20dp"

                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/not_logged_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/please_log_in_to_see_this_group"
            android:textSize="30sp"
            android:visibility="gone" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/group_page_tab"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="group_posts"
                android:text="@string/posts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="group_members"
                android:text="@string/members" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="group_runs"
                android:text="@string/runs" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/group_page_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>
</FrameLayout>