<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_run"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_run"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewHours"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/hours" />

                        <com.vicmikhailau.maskededittext.MaskedEditText
                            android:id="@+id/run_hours_dlg"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="02"
                            android:inputType="number"
                            android:minHeight="48dp"
                            app:mask="##" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewMins"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/minutes" />

                        <com.vicmikhailau.maskededittext.MaskedEditText
                            android:id="@+id/run_mins_dlg"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="10"
                            android:inputType="number"
                            android:minHeight="48dp"
                            app:mask="##" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewSecs"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/seconds" />

                        <com.vicmikhailau.maskededittext.MaskedEditText
                            android:id="@+id/run_secs_dlg"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:ems="10"
                            android:hint="50"
                            android:inputType="number"
                            android:minHeight="48dp"
                            app:mask="##" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="20dp"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/distance_km" />

                            <EditText
                                android:id="@+id/run_dist_dlg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:minHeight="48dp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


                <ImageButton
                    android:id="@+id/btn_sel_foto_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:background="#FFFFFF"
                    android:src="@drawable/add_img"
                     />

                <ImageView
                    android:id="@+id/run_img_dlg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:isScrollContainer="false"
                    android:maxWidth="350dp"
                    android:maxHeight="350dp"
                    android:minWidth="400dp"
                    android:minHeight="400dp"
                    android:scaleType="fitXY"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/create_run_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="40dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/add_run_to_group" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>